<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">NasaApp</string>
    <string name="apod">Astronomy Picture of the Day</string>
    <string name="search_in_wikipedia">Search in wikipedia</string>
    <string name="wiki_helper_text">Enter your query to search on wikipedia</string>
    <string name="today">Today</string>
    <string name="yesterday">Yesterday</string>
    <string name="day_before_yesterday">The day before yesterday</string>
    <string name="favorite">Favorite</string>
    <string name="settings">Settings</string>
    <string name="apod_explanation_example" tools:ignore="TypographyDashes">Is this giant orange ball about to roll down that tree-lined hill? No, because the giant orange ball is actually the Sun. Our Solar System\'s central star was captured rising beyond a hill on Earth twelve days ago complete with a delightfully detailed foreground. The Sun\'s disk showed five sunspots, quite a lot considering that during the solar minimum in solar activity of the past few years, most days showed no spots. A close look at the hill -- Sierra del Cid in Perter, Spain -- reveals not only silhouetted pine trees, but silhouetted people -- by coincidence three brothers of the photographer. The trees and brothers were about 3.5-kilometers away during the morning of the well-planned, single-exposure image. A dark filter muted the usually brilliant Sun and brought up great detail on the lower sunspots. Within a few minutes, the Sun rose far above the hill, while within a week, the sunspots rotated around the Sun, out of view. The captured scene, however, is now frozen in time for all to enjoy.</string>
    <string name="apod_fab_content_description">This is apod FAB content description</string>
    <string name="system_default">System default</string>
    <string name="light">Light</string>
    <string name="dark">Dark</string>
    <string name="grey">Grey</string>
    <string name="blue_grey">Blue grey</string>
    <string name="indigo">Indigo</string>
    <string name="light_green">Light green</string>
    <string name="purple">Purple</string>
    <string name="color_themes">Color themes</string>
    <string name="home">Home</string>
    <string name="earth">Earth</string>
    <string name="photo_of_the_earth">Photo of the earth</string>
    <string name="no_image_for_selected_day">"There is no image for the selected day!"</string>
    <string name="mars">Mars</string>
    <string name="mars_rover_photos">Mars Rover Photos</string>
    <string name="rover_cameras">Rover Cameras</string>
    <string name="fhaz">FHAZ</string>
    <string name="rhaz">RHAZ</string>
    <string name="mast">MAST</string>
    <string name="chemcam">CHEMCAM</string>
    <string name="no_photos_from_current_camera">No photos from current camera!</string>
    <string name="front_camera_description">Front Hazard Avoidance Camera</string>
    <string name="rear_camera_description">Rear Hazard Avoidance Camera</string>
    <string name="mast_camera_description">Mast Camera</string>
    <string name="chemistry_camera_description">Chemistry and Camera Complex</string>
    <string name="todo">ToDo</string>
    <string name="to_do_list">To-Do List</string>
    <string name="search">Search</string>
    <string name="to_do_title">To-do title</string>
    <string name="high_priority">High priority</string>
    <string name="to_do_description">To-do description</string>
</resources>