<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.SettingsFragment">

    <TextView
        android:id="@+id/settings_header"
        style="?mainHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/margin_padding_16dp"
        android:text="@string/color_themes"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/theme_radio_group"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/settings_header">

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/system_theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_padding_16dp"
            android:layout_marginEnd="@dimen/margin_padding_16dp"
            android:text="@string/system_default" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/light_theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_padding_16dp"
            android:layout_marginEnd="@dimen/margin_padding_16dp"
            android:text="@string/light" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/dark_theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_padding_16dp"
            android:layout_marginEnd="@dimen/margin_padding_16dp"
            android:text="@string/dark" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/grey_theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_padding_16dp"
            android:layout_marginEnd="@dimen/margin_padding_16dp"
            android:text="@string/grey" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/blue_grey_theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_padding_16dp"
            android:layout_marginEnd="@dimen/margin_padding_16dp"
            android:text="@string/blue_grey" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/indigo_theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_padding_16dp"
            android:layout_marginEnd="@dimen/margin_padding_16dp"
            android:text="@string/indigo" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/light_green_theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_padding_16dp"
            android:layout_marginEnd="@dimen/margin_padding_16dp"
            android:text="@string/light_green" />

        <com.google.android.material.radiobutton.MaterialRadioButton
            android:id="@+id/purple_theme"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_padding_16dp"
            android:layout_marginEnd="@dimen/margin_padding_16dp"
            android:text="@string/purple" />

    </RadioGroup>

</androidx.constraintlayout.widget.ConstraintLayout>