<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.earth.EarthFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/mars_header"
            style="?attr/mainHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_padding_16dp"
            android:text="@string/mars_rover_photos"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/date_filter"
            style="?secondaryHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_padding_16dp"
            android:background="@drawable/bg_round_shape"
            android:padding="@dimen/margin_padding_8dp"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/mars_header"
            tools:text="2021-10-02" />

        <TextView
            android:id="@+id/rover_cameras_title"
            style="?secondaryHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_padding_16dp"
            android:text="@string/rover_cameras"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/date_filter" />

        <HorizontalScrollView
            android:id="@+id/chips_scroll_view"
            android:layout_width="@dimen/match_constraint"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/margin_padding_8dp"
            android:paddingEnd="@dimen/margin_padding_8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/rover_cameras_title">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/cameras_chip_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:checkedChip="@id/front_camera_chip"
                app:selectionRequired="true"
                app:singleLine="true"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/front_camera_chip"
                    style="?attr/customChoiceChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/fhaz" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/rear_camera_chip"
                    style="?attr/customChoiceChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/rhaz" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/mast_camera_chip"
                    style="?attr/customChoiceChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/mast" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/chemistry_camera_chip"
                    style="?attr/customChoiceChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/chemcam" />

            </com.google.android.material.chip.ChipGroup>

        </HorizontalScrollView>

        <TextView
            android:id="@+id/camera_description"
            style="?secondaryHeader"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_padding_16dp"
            android:text="@string/front_camera_description"
            android:textAlignment="center"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/chips_scroll_view" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="@dimen/match_constraint"
            android:layout_marginTop="@dimen/margin_padding_16dp"
            android:adjustViewBounds="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/camera_description"
            app:srcCompat="@drawable/ic_image" />

        <include layout="@layout/progress_bar_and_error_msg" />

        <androidx.constraintlayout.widget.Group
            android:id="@+id/visibilityGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="image" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>