<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/apod_coordinator_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.apod.ApodFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/input_layout"
            style="?customOutlinedBox"
            android:layout_width="@dimen/match_constraint"
            android:layout_height="wrap_content"
            android:hint="@string/search_in_wikipedia"
            app:endIconDrawable="@drawable/ic_wikipedia"
            app:helperText="@string/wiki_helper_text"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/input_edit_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionGo"
                android:inputType="text"
                android:singleLine="true" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/apod_header"
            style="?attr/mainHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/apod"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/input_layout" />

        <HorizontalScrollView
            android:id="@+id/chips_scroll_view"
            android:layout_width="@dimen/match_constraint"
            android:layout_height="wrap_content"
            android:paddingStart="@dimen/margin_padding_8dp"
            android:paddingEnd="@dimen/margin_padding_8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/apod_header">

            <com.google.android.material.chip.ChipGroup
                android:id="@+id/dates_chip_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:checkedChip="@id/today_chip"
                app:selectionRequired="true"
                app:singleLine="true"
                app:singleSelection="true">

                <com.google.android.material.chip.Chip
                    android:id="@+id/today_chip"
                    style="?attr/customChoiceChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/today" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/yesterday_chip"
                    style="?attr/customChoiceChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yesterday" />

                <com.google.android.material.chip.Chip
                    android:id="@+id/before_yesterday_chip"
                    style="?attr/customChoiceChip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/day_before_yesterday" />

            </com.google.android.material.chip.ChipGroup>

        </HorizontalScrollView>

        <TextView
            android:id="@+id/current_apod_title"
            style="?secondaryHeader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/chips_scroll_view"
            tools:text="Sun Spot Hill" />

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/apod_image"
            android:layout_width="@dimen/match_constraint"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_padding_8dp"
            android:adjustViewBounds="true"
            android:background="@color/blue_grey_100"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/current_apod_title"
            app:srcCompat="@drawable/ic_image" />

        <androidx.core.widget.NestedScrollView
            android:id="@+id/explanation_scroll_view"
            android:layout_width="@dimen/match_constraint"
            android:layout_height="@dimen/match_constraint"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/apod_image">

            <TextView
                android:id="@+id/current_apod_explanation"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:lineSpacingExtra="4sp"
                android:padding="@dimen/margin_padding_8dp"
                tools:text="@string/apod_explanation_example" />

        </androidx.core.widget.NestedScrollView>

        <androidx.constraintlayout.widget.Group
            android:id="@+id/visibilityGroup"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:constraint_referenced_ids="apod_image,current_apod_title,explanation_scroll_view" />

        <include layout="@layout/progress_bar_and_error_msg" />

    </androidx.constraintlayout.widget.ConstraintLayout>


    <com.google.android.material.bottomappbar.BottomAppBar
        android:id="@+id/bottom_app_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:backgroundTint="?colorPrimary"
        app:fabAlignmentMode="center"
        app:hideOnScroll="true"
        app:layout_scrollFlags="scroll|enterAlways"
        app:navigationIcon="@drawable/ic_menu" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="?colorAccent"
        android:contentDescription="@string/apod_fab_content_description"
        android:src="@drawable/ic_light_bulb"
        android:tint="@color/black"
        app:fabSize="normal"
        app:layout_anchor="@id/bottom_app_bar" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
